--- a/src/components/card/card.scss
+++ b/src/components/card/card.scss
@@ -22,6 +22,7 @@
     width: 80%;
     border-radius: 6px;
     border: 2px solid;
+    border-color: black;
   }
 
   &-sayfa {
@@ -69,4 +70,8 @@
   .btn-right {
     margin-left: 20px;
   }
+}
+
+a {
+  text-decoration: none;
 }
