--- a/src/components/card/card.scss
+++ b/src/components/card/card.scss
@@ -1,4 +1,6 @@
 .card {
+  box-sizing: border-box;
+  min-width: fit-content;
   margin: 20px;
   padding-left: 20px;
   padding-right: 20px;
@@ -23,6 +25,9 @@
     border-radius: 6px;
     border: 2px solid;
     border-color: black;
+
+    display: flex;
+    margin: auto;
   }
 
   &-sayfa {
